text jumping fix on form__input

--- a/assets/scss/_extends.scss
+++ b/assets/scss/_extends.scss
@@ -22,14 +22,16 @@
   background-color: rgba($color-light, 0.05);
   font-family: $font-main;
   border: none;
-  border-bottom: 2px solid rgba($color-light, 0.10);
+  border-bottom: 2px solid rgba($color-light, 0.1);
   outline: none;
+  transition: background-color 0.5s;
 }
 
 %input-hover {
   background-color: rgba($color-light, 0.15);
-  border: 2px solid rgba($color-light, 0.10);
+  border: 2px solid rgba($color-light, 0.1);
   border-bottom: 2px solid $color-light;
+  padding: 5px 5px 5px 30px;
 }
 
 %txt-center {
